test, jobs, succesful candidate and post marks endpoint
