# app/Http/Controllers/API/JobAPIController.php
@@ -5,6 +5,9 @@ namespace App\Http\Controllers\API;
 use App\Http\Requests\API\CreateJobAPIRequest;
 use App\Http\Requests\API\UpdateJobAPIRequest;
 use App\Models\Job;
+use App\Models\JobApplicant;
+use App\Models\SuccessfulCandidate;
+use App\Models\Test;
 use App\Repositories\JobRepository;
 use Illuminate\Http\Request;
 use App\Http\Controllers\AppBaseController;
@@ -277,5 +280,149 @@ class JobAPIController extends AppBaseController
         $job->delete();
 
         return $this->sendSuccess('Job deleted successfully');
+    }
+
+    /**
+     * @param int $id
+     * @return Response
+     *
+     * @OA\Get(
+     *      path="/test-for-jobs/{id}",
+     *      summary="Display Test for a Job",
+     *      tags={"Job"},
+     *      description="Get Test for a Job",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="id of Job",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer",
+     *              format="int64"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  ref="#/components/schemas/Job"
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function GetTestForJobs($id){
+       $tests = Test::where('job_id', '=', $id)->get();
+       if($tests){
+           return $this->sendResponse($tests, 'Test for jobs, get successful', 'BT006');
+       }
+       return $this->sendError('Error', 'Something went wrong, when getting tst for jobs');
+    }
+
+    /**
+     * @param int $id
+     * @return Response
+     *
+     * @OA\Get(
+     *      path="/list-of-applicant-for-jobs/{id}",
+     *      summary="Display List of applicant for a Job",
+     *      tags={"Job"},
+     *      description="Get List of Applicants for a Job",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="id of Job",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer",
+     *              format="int64"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  ref="#/components/schemas/Job"
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function GetListOfApplicantsForAJobs($id){
+        $tests = JobApplicant::where('job_id', '=', $id)->get();
+        if($tests){
+            return $this->sendResponse($tests, 'List of Applicant for a job, get successful', 'BT007');
+        }
+        return $this->sendError('Error', 'Something went wrong, when getting list of applicant for a job');
+    }
+
+    /**
+     * @param int $id
+     * @return Response
+     *
+     * @OA\Get(
+     *      path="/list-success-candidate-for-a-job/{id}",
+     *      summary="Display List of successful candidate for a Job",
+     *      tags={"Job"},
+     *      description="Get List of successful candidate for a Job",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="id of Job",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer",
+     *              format="int64"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  ref="#/components/schemas/Job"
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function GetListOfSuccessfulCandidateForAJobs($id){
+        $tests = SuccessfulCandidate::where('job_id', '=', $id)->get();
+        if($tests){
+            return $this->sendResponse($tests, 'List of successful candidate for a job, get successful', 'BT008');
+        }
+        return $this->sendError('Error', 'Something went wrong, when getting list of successful candidate for a job');
     }
 }
