# app/Http/Controllers/API/SuccessfulCandidateAPIController.php
@@ -2,27 +2,27 @@
 
 namespace App\Http\Controllers\API;
 
-use App\Http\Requests\API\CreateUsersAPIRequest;
-use App\Http\Requests\API\UpdateUsersAPIRequest;
-use App\Models\Users;
-use App\Repositories\UsersRepository;
+use App\Http\Requests\API\CreateSuccessfulCandidateAPIRequest;
+use App\Http\Requests\API\UpdateSuccessfulCandidateAPIRequest;
+use App\Models\SuccessfulCandidate;
+use App\Repositories\SuccessfulCandidateRepository;
 use Illuminate\Http\Request;
 use App\Http\Controllers\AppBaseController;
 use Response;
 
 /**
- * Class UsersController
+ * Class SuccessfulCandidateController
  * @package App\Http\Controllers\API
  */
 
-class UsersAPIController extends AppBaseController
+class SuccessfulCandidateAPIController extends AppBaseController
 {
-    /** @var  UsersRepository */
-    private $usersRepository;
+    /** @var  SuccessfulCandidateRepository */
+    private $successfulCandidateRepository;
 
-    public function __construct(UsersRepository $usersRepo)
+    public function __construct(SuccessfulCandidateRepository $successfulCandidateRepo)
     {
-        $this->usersRepository = $usersRepo;
+        $this->successfulCandidateRepository = $successfulCandidateRepo;
     }
 
     /**
@@ -30,10 +30,10 @@ class UsersAPIController extends AppBaseController
      * @return Response
      *
      * @OA\Get(
-     *      path="/users",
-     *      summary="Get a listing of the Users.",
-     *      tags={"Users"},
-     *      description="Get all Users",
+     *      path="/successfulCandidates",
+     *      summary="Get a listing of the SuccessfulCandidates.",
+     *      tags={"SuccessfulCandidate"},
+     *      description="Get all SuccessfulCandidates",
      *      @OA\Response(
      *          response=200,
      *          description="successful operation",
@@ -46,7 +46,7 @@ class UsersAPIController extends AppBaseController
      *              @OA\Property(
      *                  property="data",
      *                  type="array",
-     *                  @OA\Items(ref="#/components/schemas/Users")
+     *                  @OA\Items(ref="#/components/schemas/SuccessfulCandidate")
      *              ),
      *              @OA\Property(
      *                  property="message",
@@ -58,28 +58,28 @@ class UsersAPIController extends AppBaseController
      */
     public function index(Request $request)
     {
-        $users = $this->usersRepository->all(
+        $successfulCandidates = $this->successfulCandidateRepository->all(
             $request->except(['skip', 'limit']),
             $request->get('skip'),
             $request->get('limit')
         );
 
-        return $this->sendResponse($users->toArray(), 'Users retrieved successfully');
+        return $this->sendResponse($successfulCandidates->toArray(), 'Successful Candidates retrieved successfully');
     }
 
     /**
-     * @param CreateUsersAPIRequest $request
+     * @param CreateSuccessfulCandidateAPIRequest $request
      * @return Response
      *
      * @OA\Post(
-     *      path="/users",
-     *      summary="Store a newly created Users in storage",
-     *      tags={"Users"},
-     *      description="Store Users",
+     *      path="/successfulCandidates",
+     *      summary="Store a newly created SuccessfulCandidate in storage",
+     *      tags={"SuccessfulCandidate"},
+     *      description="Store SuccessfulCandidate",
      *      @OA\RequestBody(
-     *          description="Users that should be stored",
+     *          description="SuccessfulCandidate that should be stored",
      *          required=false,
-     *          @OA\JsonContent(ref="#/components/schemas/Users")
+     *          @OA\JsonContent(ref="#/components/schemas/SuccessfulCandidate")
      *      ),
      *      @OA\Response(
      *          response=200,
@@ -92,7 +92,7 @@ class UsersAPIController extends AppBaseController
      *              ),
      *              @OA\Property(
      *                  property="data",
-     *                  ref="#/components/schemas/Users"
+     *                  ref="#/components/schemas/SuccessfulCandidate"
      *              ),
      *              @OA\Property(
      *                  property="message",
@@ -102,53 +102,13 @@ class UsersAPIController extends AppBaseController
      *      )
      * )
      */
-    public function store(CreateUsersAPIRequest $request)
+    public function store(CreateSuccessfulCandidateAPIRequest $request)
     {
         $input = $request->all();
-//
-//        $users = $this->usersRepository->create($input);
-//
-//        return $this->sendResponse($users->toArray(), 'Users saved successfully');
-        try{
-            $validate = Validator::make($input,[
-                'name' => 'required',
-                'phone_number' => 'required',
-                'email' => 'required|email|unique:users',
-                'address' => 'required',
-                'password' => 'required',hpp
-            ]);
 
-            if($validate->fails()){
-                return $this->sendError('Validations Error', $validate->errors());
-            }
+        $successfulCandidate = $this->successfulCandidateRepository->create($input);
 
-            $user = User::create([
-                'name' => $request->data['name'],
-                'email' => $request->data['email'],
-                'password' => bcrypt($request->data['password']),
-                'address' => $request->data['address'],
-                'phone_number' => $request->data['phone_number'],
-            ]);
-            if($user) {
-                $token = $user->createToken('pizza-task')->accessToken;
-                $users['name'] = $user->name;
-                $users['email'] = $user->email;
-                $users['address'] = $user->address;
-                $users['user_id'] = $user->id;
-                $users['address'] = $user->address;
-                $users['token'] = $token;
-                $users['phone_number'] = $user->phone_number;
-
-                Cache::forever('email'.$request->data['email'].'', $request->data['email']);
-
-                return $this->sendResponse($users, 'User Register successful!', 'OD005');
-            } else {
-                return $this->sendError('Error', 'something went wrong!');
-            }
-
-        }catch(\Exception $e){
-            Log::error('Error in Register user : '.$e);
-        }
+        return $this->sendResponse($successfulCandidate->toArray(), 'Successful Candidate saved successfully');
     }
 
     /**
@@ -156,13 +116,13 @@ class UsersAPIController extends AppBaseController
      * @return Response
      *
      * @OA\Get(
-     *      path="/users/{id}",
-     *      summary="Display the specified Users",
-     *      tags={"Users"},
-     *      description="Get Users",
+     *      path="/successfulCandidates/{id}",
+     *      summary="Display the specified SuccessfulCandidate",
+     *      tags={"SuccessfulCandidate"},
+     *      description="Get SuccessfulCandidate",
      *      @OA\Parameter(
      *          name="id",
-     *          description="id of Users",
+     *          description="id of SuccessfulCandidate",
      *          required=true,
      *          in="path",
      *          @OA\Schema(
@@ -181,7 +141,7 @@ class UsersAPIController extends AppBaseController
      *              ),
      *              @OA\Property(
      *                  property="data",
-     *                  ref="#/components/schemas/Users"
+     *                  ref="#/components/schemas/SuccessfulCandidate"
      *              ),
      *              @OA\Property(
      *                  property="message",
@@ -193,29 +153,29 @@ class UsersAPIController extends AppBaseController
      */
     public function show($id)
     {
-        /** @var Users $users */
-        $users = $this->usersRepository->find($id);
+        /** @var SuccessfulCandidate $successfulCandidate */
+        $successfulCandidate = $this->successfulCandidateRepository->find($id);
 
-        if (empty($users)) {
-            return $this->sendError('Users not found');
+        if (empty($successfulCandidate)) {
+            return $this->sendError('Successful Candidate not found');
         }
 
-        return $this->sendResponse($users->toArray(), 'Users retrieved successfully');
+        return $this->sendResponse($successfulCandidate->toArray(), 'Successful Candidate retrieved successfully');
     }
 
     /**
      * @param int $id
-     * @param UpdateUsersAPIRequest $request
+     * @param UpdateSuccessfulCandidateAPIRequest $request
      * @return Response
      *
      * @OA\Put(
-     *      path="/users/{id}",
-     *      summary="Update the specified Users in storage",
-     *      tags={"Users"},
-     *      description="Update Users",
+     *      path="/successfulCandidates/{id}",
+     *      summary="Update the specified SuccessfulCandidate in storage",
+     *      tags={"SuccessfulCandidate"},
+     *      description="Update SuccessfulCandidate",
      *      @OA\Parameter(
      *          name="id",
-     *          description="id of Users",
+     *          description="id of SuccessfulCandidate",
      *          required=true,
      *          in="path",
      *          @OA\Schema(
@@ -224,9 +184,9 @@ class UsersAPIController extends AppBaseController
      *          )
      *      ),
      *      @OA\RequestBody(
-     *          description="Users that should be updated",
+     *          description="SuccessfulCandidate that should be updated",
      *          required=false,
-     *          @OA\JsonContent(ref="#/components/schemas/Users")
+     *          @OA\JsonContent(ref="#/components/schemas/SuccessfulCandidate")
      *      ),
      *      @OA\Response(
      *          response=200,
@@ -239,7 +199,7 @@ class UsersAPIController extends AppBaseController
      *              ),
      *              @OA\Property(
      *                  property="data",
-     *                  ref="#/components/schemas/Users"
+     *                  ref="#/components/schemas/SuccessfulCandidate"
      *              ),
      *              @OA\Property(
      *                  property="message",
@@ -249,20 +209,20 @@ class UsersAPIController extends AppBaseController
      *      )
      * )
      */
-    public function update($id, UpdateUsersAPIRequest $request)
+    public function update($id, UpdateSuccessfulCandidateAPIRequest $request)
     {
         $input = $request->all();
 
-        /** @var Users $users */
-        $users = $this->usersRepository->find($id);
+        /** @var SuccessfulCandidate $successfulCandidate */
+        $successfulCandidate = $this->successfulCandidateRepository->find($id);
 
-        if (empty($users)) {
-            return $this->sendError('Users not found');
+        if (empty($successfulCandidate)) {
+            return $this->sendError('Successful Candidate not found');
         }
 
-        $users = $this->usersRepository->update($input, $id);
+        $successfulCandidate = $this->successfulCandidateRepository->update($input, $id);
 
-        return $this->sendResponse($users->toArray(), 'Users updated successfully');
+        return $this->sendResponse($successfulCandidate->toArray(), 'SuccessfulCandidate updated successfully');
     }
 
     /**
@@ -270,13 +230,13 @@ class UsersAPIController extends AppBaseController
      * @return Response
      *
      * @OA\Delete(
-     *      path="/users/{id}",
-     *      summary="Remove the specified Users from storage",
-     *      tags={"Users"},
-     *      description="Delete Users",
+     *      path="/successfulCandidates/{id}",
+     *      summary="Remove the specified SuccessfulCandidate from storage",
+     *      tags={"SuccessfulCandidate"},
+     *      description="Delete SuccessfulCandidate",
      *      @OA\Parameter(
      *          name="id",
-     *          description="id of Users",
+     *          description="id of SuccessfulCandidate",
      *          required=true,
      *          in="path",
      *          @OA\Schema(
@@ -307,15 +267,15 @@ class UsersAPIController extends AppBaseController
      */
     public function destroy($id)
     {
-        /** @var Users $users */
-        $users = $this->usersRepository->find($id);
+        /** @var SuccessfulCandidate $successfulCandidate */
+        $successfulCandidate = $this->successfulCandidateRepository->find($id);
 
-        if (empty($users)) {
-            return $this->sendError('Users not found');
+        if (empty($successfulCandidate)) {
+            return $this->sendError('Successful Candidate not found');
         }
 
-        $users->delete();
+        $successfulCandidate->delete();
 
-        return $this->sendSuccess('Users deleted successfully');
+        return $this->sendSuccess('Successful Candidate deleted successfully');
     }
 }
